Fix layout misalignment when showing error messages
The <p> tag containing the error message didn't
include the SVG icon by default, so when the icon
appeared it pushed the fields beneath it down,
breaking alignment with the adjacent fields.

--- a/styles.css
+++ b/styles.css
@@ -169,12 +169,12 @@ input, button {
     margin-bottom: .2em;
 }
 
-.form-section input:user-valid {
-    outline: 2px solid green;
+.form-section input + p::before {
+    content: url(./images/invalid.svg);
 }
 
-.form-section input:user-invalid + p::before {
-    content: url(./images/invalid.svg);
+.form-section input:user-valid {
+    outline: 2px solid green;
 }
 
 .form-section input:user-invalid + p {
